--- a/NBAStatsWriteActivePlayers.ipynb
+++ b/NBAStatsWriteActivePlayers.ipynb
@@ -215,25 +215,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high = 0\n",
-    "fer = 0\n",
-    "fantasyRank = []\n",
+    "def split(arr,low,high): \n",
+    "    i = (low-1)         #Index of smaller element \n",
+    "    splitPoint = arr[high][-1]     \n",
+    "  \n",
+    "    for j in range(low,high): \n",
+    "        if   arr[j][-1] <= splitPoint: \n",
+    "            # increment index of smaller element \n",
+    "            i = i+1 \n",
+    "            arr[i],arr[j] = arr[j],arr[i] \n",
+    "  \n",
+    "    arr[i+1],arr[high] = arr[high],arr[i+1] \n",
+    "    return (i+1) \n",
     "\n",
-    "#Use bubble sort to sort players from highest to lowest fasntasy efficiency rating (FER)\n",
-    "def bubbleSort(arr):\n",
-    "    n = len(arr)\n",
-    " \n",
-    "    # Traverse through all list elements\n",
-    "    for i in range(n):\n",
-    " \n",
-    "        # Last i elements are already in place\n",
-    "        for j in range(0, n-i-1):\n",
-    " \n",
-    "            # traverse the list from 0 to n-i-1\n",
-    "            # Swap if the element found is greater\n",
-    "            # than the next element\n",
-    "            if arr[j][-1] < arr[j+1][-1]:\n",
-    "                arr[j], arr[j+1] = arr[j+1], arr[j]"
+    "def quickSort(arr,low,high): \n",
+    "    if low < high: \n",
+    "  \n",
+    "        splitIndex = split(arr,low,high) \n",
+    "        quickSort(arr, low, splitIndex-1) \n",
+    "        quickSort(arr, splitIndex, high) "
    ]
   },
   {
@@ -242,8 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bubbleSort(fantasyStats)\n",
-    "fantasyStats\n",
+    "quickSort(fantasyStats,0,len(fantasyStats)-1)\n",
+    "fantasyStats.reverse()\n",
     "f = open(\"Stats.txt\", \"w\")\n",
     "f.write(str(fantasyStats))\n",
     "f.close()\n",
