Updated comments for SQL info

--- a/NBAStatsRead.ipynb
+++ b/NBAStatsRead.ipynb
@@ -18,18 +18,11 @@
     "import mysql.connector\n",
     "#COnnect to the SQL server and show all databases\n",
     "mydb = mysql.connector.connect(\n",
-    "  host=\"localhost\",\n",
+    "  host=\"localhost\", #Leave as localhost for localserver\n",
     "  user=\"root\",\n",
     "  passwd=\"\",\n",
-    "  database = \"players\"\n",
-    ")\n",
-    "\n",
-    "print(mydb)\n",
-    "cursor = mydb.cursor()\n",
-    "cursor.execute(\"SHOW DATABASES\")\n",
-    "databases = cursor.fetchall() \n",
-    "for database in databases:\n",
-    "    print(database)"
+    "  database = \"players\" #Database name\n",
+    ")"
    ]
   },
   {
@@ -49,7 +42,7 @@
     "    playersTemp = []\n",
     "    playersTeam = []\n",
     "    cursor = mydb.cursor()\n",
-    "    sql = \"SELECT * FROM nba20182019 WHERE Team = %s\"\n",
+    "    sql = \"SELECT * FROM nba20182019 WHERE Team = %s\" #SELECT * FROM TableName\n",
     "    team = (Team, )\n",
     "    cursor.execute(sql, team)\n",
     "    playersTemp = cursor.fetchall()\n",
