--- a/NBAStatsWrite.ipynb
+++ b/NBAStatsWrite.ipynb
@@ -262,7 +262,7 @@
     "import mysql.connector\n",
     "#Connect to the SQL server and show all databases\n",
     "mydb = mysql.connector.connect(\n",
-    "  host=\"localhost\",\n", 
+    "  host=\"localhost\", #Use localhost for local SQL server\n",
     "  user=\"root\",\n",
     "  passwd=\"\",\n",
     ")\n",
@@ -283,7 +283,7 @@
    "source": [
     "#Insert player data into the desired database and table\n",
     "count = 1\n",
-    "#DatabaseName.TableName for desired table to write to\n"
+    "#INSERT INTO DatabaseName.TabeleName\n",
     "query = \"INSERT INTO players.nba20182019 (Name,Team,GP,PPG,APG,RPG,SPG,BPG,TOPG,FGPercent,FTPercent,3PMPG,FER,Rank) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\"\n",
     "for player in fantasyStats:\n",
     "    values = (player[0],player[1],player[2],player[3],player[4],player[5],player[6],player[7],\n",
